# pglockanalyze

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: analyzer.rs  analyzer_config.rs  errors.rs  lib.rs  lock.rs  main.rs  statement.rs
src/lock/: database.rs  lock_mode.rs  lock_type.rs  table_lock_mode.rs  target.rs
tests/: fixture.yml  fixture_locations.yml  fixture_non_wrapping.yml  fixture_todo.yml  tests.rs  wrap_in_tx_test.rs
