[package]
name = "pglockanalyze"
version = "0.0.3"
authors = ["Agis Anastasopoulos <a@xz0.org>"]
description = "See what PostgreSQL locks your migrations acquired"
edition = "2024"
repository = "https://github.com/agis/pglockanalyze"
license = "Apache-2.0"
keywords = ["postgresql", "migrations", "database-migrations", "schema-migrations"]
categories = ["database", "command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
patharg = "0.4.0"
postgres = { version = "0.19.10"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlparser = "0.56.0"
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_yaml = "0.9.34"
